[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/Hamborguetasma_voladora.png" type="Texture" id=1]
[ext_resource path="res://Scripts/AnvorgentasmaVolador.gd" type="Script" id=2]
[ext_resource path="res://Assets/MusicAndSounds/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/AnvorguetasmaDeath2.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 7.5
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 52.0682

[sub_resource type="CircleShape2D" id=10]
radius = 450.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
Death = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -80 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -66 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="LifeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LifeArea"]
position = Vector2( 0, -69 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="InmunityTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GetPosArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="GetPosArea"]
position = Vector2( 0, -60 )
shape = SubResource( 10 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="LifeArea" to="." method="_on_LifeArea_area_entered"]
[connection signal="timeout" from="InmunityTimer" to="." method="_on_InmunityTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="area_entered" from="GetPosArea" to="." method="_on_GetPosArea_area_entered"]
[connection signal="area_exited" from="GetPosArea" to="." method="_on_GetPosArea_area_exited"]
